--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ var _hmt = _hmt || [];
 	</ul>
 </header>
 
+<script src="https://fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>
 	
 <div id="sidebar">
 	<button id="sidebar-toggle" class="toggle" ><i class="fa fa-arrow-right " aria-hidden="true"></i></button>
