--- a/index.html
+++ b/index.html
@@ -228,5 +228,6 @@ var _hmt = _hmt || [];
 </script>
 	<button id="totop-toggle" class="toggle"><i class="fa fa-angle-double-up" aria-hidden="true"></i></button>
 	<script src="https://fastly.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>
+	<script defer src="https://cloud.umami.is/script.js" data-website-id="0917c3ae-10bd-478c-bf81-e1ea0de63863"></script>
 </body>
 </html>
